Changed Settings Part
Demographic data has been updated to match the iOS version